# perfect-squares

./: README.md  perfect-squares.cabal
src/: Main.hs
